# whisperX

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements_linux.txt  requirements_mac.txt  requirements_win.txt  ruff.toml
whisperx/: SubtitlesProcessor.py  __main__.py  alignment.py  asr.py  audio.py  diarize.py  transcribe.py  utils.py
whisperx/vads/: pyannote.py  silero.py  vad.py
