[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.3.1"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.6.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "onnxruntime>=1.19",
    "pandas>=2.2.3",
    "pyannote-audio>=3.3.2",
    "torch",
    "torchaudio",
    "transformers>=4.48.0",
]


[project.scripts]
whisperx = "whisperx.transcribe:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

[tool.uv.sources]
torch = [
    { index = "torch_win", marker = "sys_platform == 'win32'" },
    { index = "torch_linux", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "torchaudio_win", marker = "sys_platform == 'win32'" },
    { index = "torchaudio_linux", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "torch_win"
url = "https://download.pytorch.org/whl/nightly/cu128/torch-2.8.0.dev20250417%2Bcu128-cp312-cp312-win_amd64.whl"
explicit = true

[[tool.uv.index]]
name = "torchaudio_win"
url = "https://download.pytorch.org/whl/nightly/cu128/torchaudio-2.6.0.dev20250417%2Bcu128-cp312-cp312-win_amd64.whl"
explicit = true

[[tool.uv.index]]
name = "torch_linux"
url = "https://download.pytorch.org/whl/nightly/cu128/torch-2.8.0.dev20250417%2Bcu128-cp312-cp312-linux_x86_64.whl"
explicit = true

[[tool.uv.index]]
name = "torchaudio_linux"
url = "https://download.pytorch.org/whl/nightly/cu128/torchaudio-2.6.0.dev20250417%2Bcu128-cp312-cp312-linux_x86_64.whl"
explicit = true
