[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.3.4"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.6.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "onnxruntime>=1.19",
    "pandas>=2.2.3",
    "pyannote-audio>=3.3.2",
    "torch>=2.7.0",
    "torchaudio",
    "transformers>=4.51.0",
    "ruff"
]


[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

# [tool.uv.sources]
# torch = [
#     { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
#     { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
# ]
# torchaudio = [
#     { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
#     { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
# ]

# [[tool.uv.index]]
# name = "pytorch-cu126"
# url = "https://download.pytorch.org/whl/cu126"
# explicit = true

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/nightly/cu128"
# explicit = true
